--- a/style1.css
+++ b/style1.css
@@ -59,6 +59,15 @@ ul {
     outline: none;
     
   }
+  .customlabels{
+    height:45px;
+    border:none;
+    width:500px;
+    font-size:16px;
+    outline: none;
+    
+  }
+  
   .voice{
     height:20px;
     position:relative;
